# ScuffedPaint

./: CMakeLists.txt  ScuffedPaint.slnx  ScuffedPaint.vcxproj
src/: main.cpp
